--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file for styling -->
     <style>
+        /* CSS styles can be added directly within the <style> tags */
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -13,57 +15,91 @@
             padding: 0;
         }
         .container {
-            max-width: 600px;
-            margin: 100px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .hero-section {
+            margin-bottom: 40px;
+        }
+        .hero-section img {
+            max-width: 100%;
         }
         h1 {
+            font-size: 36px;
             color: #333;
         }
         p {
-            color: #666;
             font-size: 18px;
+            color: #666;
+            margin-bottom: 30px;
         }
-        .countdown {
-            font-size: 24px;
-            color: #ff6f61;
+        #countdown {
+            font-size: 48px;
+            font-weight: bold;
+            margin-bottom: 30px;
+        }
+        form input {
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+        }
+        form button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+        form button:hover {
+            background-color: #666;
+        }
+        .social-links {
+            margin-top: 30px;
+        }
+        .social-links a {
+            display: inline-block;
+            margin-right: 10px;
+        }
+        .social-links img {
+            width: 30px;
+            height: 30px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Coming Soon</h1>
-        <p>We're working hard to bring you an amazing website. Stay tuned for updates!</p>
-        <div class="countdown" id="countdown">Launching in...</div>
+        <div class="hero-section">
+            <img src="hero-image.jpg" alt="Coming Soon Image"> <!-- Eye-catching visual -->
+        </div>
+        <div class="content-section">
+            <h1>New Website Coming Soon!</h1>
+            <p>Get ready for an amazing new experience.</p>
+            <div id="countdown"></div> <!-- Countdown Timer -->
+            <form>
+                <input type="email" placeholder="Enter your email"> <!-- Email Signup Form -->
+                <button type="submit">Notify Me</button>
+            </form>
+            <div class="social-links">
+                <a href="#"><img src="facebook.png" alt="Facebook"></a> <!-- Social Links -->
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
     </div>
-
     <script>
-        // Set the date we're counting down to
+        // JavaScript code for the countdown timer can be added here
         var countDownDate = new Date("April 30, 2024 00:00:00").getTime();
-
-        // Update the countdown every 1 second
         var x = setInterval(function() {
-
-            // Get the current date and time
             var now = new Date().getTime();
-
-            // Calculate the distance between now and the countdown date
             var distance = countDownDate - now;
-
-            // Calculate days, hours, minutes and seconds
             var days = Math.floor(distance / (1000 * 60 * 60 * 24));
             var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-            // Display the countdown
             document.getElementById("countdown").innerHTML = "Launching in " + days + "d " + hours + "h "
             + minutes + "m " + seconds + "s ";
-
-            // If the countdown is finished, display a message
             if (distance < 0) {
                 clearInterval(x);
                 document.getElementById("countdown").innerHTML = "We're live now!";
